--- a/main.html
+++ b/main.html
@@ -4,10 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<div class="header"><h1>Shaw's News</h1></div>
+	
 </head>
 
 <body>
+	<header><h1>Shaw's News</h1></header>
 	
 	<div class="body">
 		<div class="latest-news-section">
